# open-watcom-v2

./: .gitattributes  .gitignore  .travis.yml  BUILD.md  README.md  azure-pipelines.yml  azure-pl.yml  bootclean.sh  build.bat  build.cmd  build.sh  buildrel.bat  buildrel.cmd  buildrel.sh  buildrex.cmd  clean.bat  clean.cmd  clean.sh  clrgittr.sh  cmnvars.bat  cmnvars.cmd  cmnvars.sh  covsc-pl.yml  git-source-pickup.pl  gitget.sh  gitupdf.sh  gitupds.sh  owconfig.bat  owconfig.vbs  projects.txt  readme.txt  relea-pl.yml  setvars.bat  setvars.cmd  setvars.dos  setvars.sh  zipup-rel.cmd  zipup-rel.sh  zipup.bat  zipup.sh  (+2 more)
azure/: artiflod.yml  artifsav.yml  build.cmd  build.sh  buildx.cmd  buildx.sh  distload.yml  distsave.yml  install.yml  instload.yml  instsave.yml  os-linux.yml  os-osx.yml  os-win.yml  relall.yml  relload.yml  relsave.yml  var-lnx.yml  var-osx.yml  var-win.yml
bat/: doeb.bat  eb.bat  filesize.c  makecomm  makeinit  stub.c  unset.bat  xb.sed
bld/: .gitignore  boot.ctl  builder.ctl  buildlnx.ctl  lang.ctl  langlnx.ctl
bld/wipfc/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  binmake  builder.ctl  config.h.in  configure  configure.ac  exever.rc  lang.ctl  master.mif  notes.txt  prereq.ctl
bld/wipfc/cpp/: Outline.txt  acvwport.cpp  acvwport.hpp  artlink.cpp  artlink.hpp  artwork.cpp  artwork.hpp  bitmap.cpp  bitmap.hpp  brcmd.cpp  brcmd.hpp  btmpblk.cpp  btmpblk.hpp  caution.cpp  caution.hpp  cecmd.cpp  cecmd.hpp  cell.cpp  cell.hpp  cgraphic.cpp  cgraphic.hpp  cntrydef.cpp  cntrydef.hpp  color.cpp  color.hpp  compiler.cpp  compiler.hpp  config.hpp  controls.cpp  controls.hpp  ctrl.cpp  ctrl.hpp  ctrlbtn.cpp  ctrlbtn.hpp  ctrldef.cpp  ctrldef.hpp  ctrlgrp.cpp  ctrlgrp.hpp  ctrltag.hpp  dataenc.hpp  (+139 more)
bld/wipfc/helper/: deDEUTF8.nls  de_DE.nls  enGBUTF8.nls  enUSUTF8.nls  en_GB.nls  en_US.nls  enti0000.txt  enti0932.txt  enti0934.txt  enti0938.txt  entity.txt  frCAUTF8.nls  frFRUTF8.nls  fr_CA.nls  fr_FR.nls  ibm-437_P100-1995.cnv  ibm-850_P100-1995.cnv  ibm-852_P100-1995.cnv  ibm943.cnv  jaJAUTF8.nls  ja_JA.nls  nlsconf.txt  xx_YY.nls
bld/wipfc/icu/common/: cmemory.h  cstring.h  cwchar.h  ucnv.cpp  ucnv_cb.h  ucnv_err.cpp  ucnv_ext.cpp  ucnv_u8.cpp  ucnvmbcs.cpp  ustr_imp.h
bld/wipfc/icu/common/unicode/: localpoi.h  localpointer.h  platform.h  ptypes.h  stringop.h  uchar.h  ucnv.h  udata.h  uenum.h  umachine.h  uset.h  utypes.h
bld/wipfc/ipfcdump/: bitmap.c  cells.c  child.c  controls.c  dict.c  dump.bat  extfiles.c  fonts.c  fts.c  gnames.c  header.c  index.c  ipfcdump.c  ipfcdump.h  master.mif  nls.c  panel.c  strings.c  toc.c
bld/wipfc/ipfcdump/dosi86/: makefile
bld/wipfc/ipfcdump/linux386/: makefile
bld/wipfc/nt386/: makefile
bld/wipfc/ntx64/: makefile
bld/wipfc/test/: env.bat  test.bat
bld/wipfc/test/neg/: neg1.ipf  neg10.ipf  neg2.ipf  neg3.ipf  neg4.ipf  neg5.ipf  neg6.ipf  neg7.ipf  neg8.ipf  neg9.ipf
bld/wipfc/test/pos/: pos1.ipf  pos10.ipf  pos2.ipf  pos3.ipf  pos4.ipf  pos5.ipf  pos6.ipf  pos7.ipf  pos8.ipf  pos8a.ipf  pos9.ipf
ci/: artfload.yml  artfsave.yml  boot.yml  bootow.yml  build.yml  buildx.cmd  buildx.sh  codeql.sh  covbuild.cmd  covbuild.sh  coverity.cmd  coverity.sh  coverity.yml  docbuild.yml  docload.yml  docs.yml  docsload.yml  doreleas.yml  dosbox-x.rb  dosbox.yml  gituser.yml  install.yml  lastbld.yml  mirror.yml  prbuild.yml  release.yml  slash.cmd  testboot.yml  tests.yml  wikibld.yml  wikiupd.yml
contrib/libzip/: .hgignore  .hgtags  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  THANKS  TODO  cmake-config.h.in  cmake-zipconf.h.in  config.h.in  configure  configure.ac  libzip.pc.in  libzip.spec  ltmain.sh
contrib/libzip/docs/: torrentzip.txt
contrib/libzip/lib/: CMakeLists.txt  Makefile.am  Makefile.in  make_zip_err_str.sh  make_zipconf.sh  zadd.c  zadddir.c  zclose.c  zdelete.c  zdirent.c  zentfree.c  zentnew.c  zerr2str.c  zerrget.c  zerrgets.c  zerrstr.c  zerrstre.c  zfclose.c  zfdopen.c  zferrget.c  zfgetoff.c  zfopen.c  zfopenc.c  zfopenic.c  zfopenin.c  zfread.c  zfree.c  zfstrerr.c  zgetcmpi.c  zgetenci.c  zgetfcom.c  zgetfxtr.c  zgetname.c  zgetnume.c  zgetnumf.c  zip.h  zipconf.h  ziperror.c  zipint.h  znameloc.c  (+31 more)
contrib/libzip/man/: CMakeLists.txt  Makefile.am  Makefile.in  libzip.man  libzip.mdoc  make_zip_errors.sh  zip_add.man  zip_add.mdoc  zip_add_dir.man  zip_add_dir.mdoc  zip_close.man  zip_close.mdoc  zip_delete.man  zip_delete.mdoc  zip_error_clear.man  zip_error_clear.mdoc  zip_error_get.man  zip_error_get.mdoc  zip_error_get_sys_type.man  zip_error_get_sys_type.mdoc  zip_error_to_str.man  zip_error_to_str.mdoc  zip_errors.man  zip_errors.mdoc  zip_fclose.man  zip_fclose.mdoc  zip_fdopen.man  zip_fdopen.mdoc  zip_file_strerror.man  zip_file_strerror.mdoc  zip_fopen.man  zip_fopen.mdoc  zip_fopen_encrypted.man  zip_fopen_encrypted.mdoc  zip_fread.man  zip_fread.mdoc  zip_get_archive_comment.man  zip_get_archive_comment.mdoc  zip_get_file_comment.man  zip_get_file_comment.mdoc  (+44 more)
contrib/libzip/regress/: CMakeLists.txt  Makefile.am  Makefile.in  add_from_buffer.c  add_from_buffer.test  add_from_file.c  add_from_file.test  add_from_file_duplicate.test  add_from_filep.c  add_from_zip.c  add_from_zip.test  add_invalid.c  buffadd.c  encrypt.c  encrypt.test  extractall.c  fileadd.c  fread.c  get_comment.c  get_comment.test  mkname.c  mkname.h  name_locate.c  name_locate.test  open.c  open_many_ok.test  open_new_but_exists.test  open_new_ok.test  open_nonarchive.test  open_nosuchfile.test  open_ok.test  set_comment_all.c  set_comment_all.test  set_comment_localonly.c  set_comment_localonly.test  set_comment_removeglobal.c  set_comment_removeglobal.test  set_comment_revert.c  set_comment_revert.test  tryopen.c
contrib/libzip/src/: CMakeLists.txt  Makefile.am  zipcmp.c  zipmerge.c  ziptorrent.c
contrib/libzip/wlib/: makefile
docs/: .gitignore  areadme.txt  booklist.txt  builder.ctl  freadme.txt  howto.txt  instlic.txt  lang.ctl  makecnt1.awk  makecnt2.awk  makehha.awk  makehhc.awk  makehhk.awk  makehhp.awk  readme.sp  readme.txt  splithtm.awk
(+36010 files in other folders)
