## Process this file with automake to produce Makefile.in
bin_PROGRAMS = wipfc
wipfc_SOURCES = cpp/main.cpp cpp/compiler.cpp cpp/document.cpp cpp/env.cpp \
        cpp/ipfbuff.cpp cpp/ipffile.cpp cpp/lexer.cpp \
        cpp/bitmap.cpp cpp/btmpblk.cpp cpp/cecmd.cpp cpp/cell.cpp cpp/ctrlbtn.cpp \
        cpp/ctrlgrp.cpp cpp/controls.cpp cpp/errors.cpp cpp/extfiles.cpp cpp/fnt.cpp \
        cpp/fntcol.cpp cpp/fts.cpp cpp/gdword.cpp cpp/gdict.cpp cpp/gnames.cpp \
        cpp/header.cpp cpp/index.cpp cpp/nls.cpp cpp/page.cpp cpp/strings.cpp \
        cpp/synonym.cpp cpp/toc.cpp cpp/tocref.cpp cpp/util.cpp cpp/xref.cpp \
        cpp/element.cpp cpp/text.cpp cpp/entity.cpp cpp/punct.cpp cpp/whtspc.cpp \
        cpp/word.cpp cpp/tag.cpp cpp/acvwport.cpp cpp/artlink.cpp cpp/artwork.cpp \
        cpp/brcmd.cpp cpp/caution.cpp cpp/cgraphic.cpp cpp/color.cpp cpp/ctrl.cpp \
        cpp/ctrldef.cpp cpp/ddf.cpp cpp/dl.cpp cpp/docprof.cpp cpp/fig.cpp \
        cpp/figcap.cpp cpp/fn.cpp cpp/font.cpp cpp/hdref.cpp cpp/hide.cpp \
        cpp/hn.cpp cpp/hpn.cpp cpp/i1.cpp cpp/i2.cpp cpp/icmd.cpp cpp/isyn.cpp \
        cpp/lines.cpp cpp/link.cpp cpp/lm.cpp cpp/lp.cpp cpp/note.cpp cpp/nt.cpp \
        cpp/ol.cpp cpp/p.cpp cpp/parml.cpp cpp/pbutton.cpp cpp/rm.cpp cpp/sl.cpp \
        cpp/table.cpp cpp/title.cpp cpp/ul.cpp cpp/warning.cpp cpp/xmp.cpp
noinst_HEADERS = cpp/compiler.hpp cpp/document.hpp cpp/env.hpp cpp/ipfbuff.hpp \
        cpp/ipffile.hpp cpp/lexer.hpp \
        cpp/bitmap.hpp cpp/btmpblk.hpp cpp/cecmd.hpp cpp/cell.hpp cpp/ctrlbtn.hpp \
        cpp/ctrlgrp.hpp cpp/controls.hpp cpp/errors.hpp cpp/extfiles.hpp cpp/fnt.hpp \
        cpp/fntcol.hpp cpp/fts.hpp cpp/gdword.hpp cpp/gdict.hpp cpp/gnames.hpp \
        cpp/header.hpp cpp/index.hpp cpp/nls.hpp cpp/page.hpp cpp/strings.hpp \
        cpp/synonym.hpp cpp/toc.hpp cpp/tocref.hpp cpp/util.hpp cpp/xref.hpp \
        cpp/element.hpp cpp/text.hpp cpp/entity.hpp cpp/punct.hpp cpp/whtspc.hpp \
        cpp/word.hpp cpp/tag.hpp cpp/acvwport.hpp cpp/artlink.hpp cpp/artwork.hpp \
        cpp/brcmd.hpp cpp/caution.hpp cpp/cgraphic.hpp cpp/color.hpp cpp/ctrl.hpp \
        cpp/ctrldef.hpp cpp/ddf.hpp cpp/dl.hpp cpp/docprof.hpp cpp/fig.hpp \
        cpp/figcap.hpp cpp/fn.hpp cpp/font.hpp cpp/hdref.hpp cpp/hide.hpp cpp/hn.hpp \
        cpp/hpn.hpp cpp/i1.hpp cpp/i2.hpp cpp/icmd.hpp cpp/isyn.hpp \
        cpp/lines.hpp cpp/link.hpp cpp/lm.hpp cpp/lp.hpp cpp/note.hpp cpp/nt.hpp \
        cpp/ol.hpp cpp/p.hpp cpp/parml.hpp cpp/pbutton.hpp cpp/rm.hpp cpp/sl.hpp \
        cpp/table.hpp cpp/title.hpp cpp/ul.hpp cpp/warning.hpp cpp/xmp.hpp
wipfcdir = $datadir/wipfc
dist_wipfc_DATA = helper/de_DE.nls helper/en_GB.nls helper/en_US.nls helper/fr_CA.nls \
        helper/fr_FR.nls helper/ja_JA.nls helper/xx_YY.nls helper/enti0932.txt \
        helper/enti0934.txt helper/enti0938.txt helper/entity.txt
